--- a/index.html
+++ b/index.html
@@ -3,11 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>soffia</title>
 </head>
 <body>
-<h1> hellou world </h1>
-
+<h1 class="titulo"> hello world </h1>
+<p class="1"> texto 1</p>
+<p class="2"> texto 2</p>
+<p class="3"> texto 3</p>
+<p class="4"> texto 4</p>
+<p class="5"> texto 5</p>
 
 
     
